--- a/f_Backend/Day_09/package.json
+++ b/f_Backend/Day_09/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "mongodb": "^6.18.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongodb": "^6.18.0",
     "nodemon": "^3.1.10"
   }
 }
