--- a/f_Backend/Day_10/.gitignore
+++ b/f_Backend/Day_10/.gitignore
@@ -1,1 +1,11 @@
-node_modules
+# Environment variables
+.env
+
+# Node modules
+node_modules/
+
+# Logs
+*.log
+
+# Other sensitive files
+config.json
