--- a/f_Backend/Day_10/package.json
+++ b/f_Backend/Day_10/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
